# jdz_allocator

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
c-src/: threadlocal_arenas.c  threadlocal_arenas.h
cver/: CMakeLists.txt
cver/include/: internal.h  static_config.h  types.h  utils.h
cver/src/: CMakeLists.txt  arena.c  arena_static.h  deferred_span_list.c  jdzmalloc.c  jdzmalloc.h  malloc.c  mpsc_large_cache.c  span.c  span_cache.c  span_list.c
cver/test/: CMakeLists.txt  mpsc_large_cache_test.c  span_cache_test.c  test_helper.h
libso/: libjdzglobal.h  libjdzglobal.zig  libjdzglobalwrap.c  libjdzshared.zig
src/: DeferredSpanList.zig  Span.zig  SpanList.zig  allocator.zig  arena.zig  arena_handler.zig  bench.zig  bounded_mpmc_queue.zig  bounded_mpsc_queue.zig  bounded_stack.zig  deferred_span_list.zig  global_allocator.zig  global_arena_handler.zig  grow_shrink_bench.zig  jdz_allocator.zig  libjdzglobal.zig  libjdzlocal.zig  libjdzshared.zig  local_allocator.zig  lock.zig  shared_allocator.zig  shared_arena_handler.zig  span.zig  span_cache.zig  span_list.zig  span_stack.zig  static_config.zig  utils.zig
